notesops-config/kustomize/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      containers:
      - name: notes-app
        image: aneeswar/notes-app:latest
        ports:
        - containerPort: 3000
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: { duration: 60s }
