notesops-config/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: notes-app
